--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://clumsynite.github.io/react-tailwind-starter/",
   "name": "tailwind_starter",
   "private": true,
   "version": "0.0.0",
